tests/fsharp/typecheck/sigs/neg115.bsl

neg115.fs(8,30,8,34): typecheck error FS0001: A generic construct requires that the type 'struct ('a * 'b)' is a CLI or F# struct type
